# SmartCar2023

./: README.md
2023新代码/c++/demo/: camera2video.cpp  gpioDemo.cpp  predict.cpp  rgb_mat2gray_array.cpp  rs485_recv.cpp  usb_uart_recv.cpp  usb_uart_send.cpp
2023新代码/c++/include/common/: model_config.hpp
2023新代码/c++/include/core/: detection.hpp  preprocess.hpp  rs485.hpp  uart_test.hpp
2023新代码/c++/include/util/: stop_watch.hpp
c++/: CMakeLists.txt
c++/demo/: camera_display.cpp  rs485_send.cpp  uart_recv.cpp  uart_send.cpp  usb_device_test.cpp
c++/include/core/: capture.hpp  frame_save.hpp  predictor.hpp  uart.hpp
c++/include/util/: json.hpp  mat_util.hpp
旧代码/Code_ICAR_FZ3B_OS/: Tetris.py.code-workspace
旧代码/Code_ICAR_FZ3B_OS/src/config/: motion.json
旧代码/Code_ICAR_FZ3B_OS/src/include/: common.hpp  uart.hpp
旧代码/Code_ICAR_FZ3B_OS/src/src/: controlcenter_cal.cpp  icar.cpp  image_preprocess.cpp  import pygame.py  motion_controller.cpp  perspective_mapping.cpp
旧代码/Code_ICAR_FZ3B_OS/src/src/detection/: busy_detection.cpp  freezone_detection.cpp  gasstation_detection.cpp  slope_detection.cpp
旧代码/Code_ICAR_FZ3B_OS/src/src/recognition/: cross_recognition.cpp  freezone_recognition.cpp  garage_recognition.cpp  ring_recognition.cpp  track_recognition.cpp
旧代码/Code_ICAR_FZ3B_OS/src/tool/: camera_display.cpp  image_collection.cpp  新建文件夹.code-workspace
调试日志/: 2023-4-1 调试日志.md
